@@ -1,4 +1,7 @@
 package org.moqui.impl.service
+
+import org.moqui.context.ArtifactAuthorizationException
+
 /*
  * This Work is in the public domain and is provided on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied,
@@ -50,6 +53,7 @@ public class ServiceJsonRpcDispatcher {
                 }
             }
         } else {
+            // logger.info("========= JSON-RPC request with map: ${callMap}")
             Map jsonResp = callSingle(callMap.method as String, callMap.params, callMap.id ?: null)
             eci.getWeb().sendJsonResponse(jsonResp)
         }
@@ -81,11 +85,22 @@ public class ServiceJsonRpcDispatcher {
 
         Map result = null
         if (errorMessage == null) {
-            result = eci.service.sync().name(sd.serviceName).parameters((Map) paramsObj).call()
-
-            if (eci.getMessage().hasError()) {
-                logger.warn("Got errors in JSON-RPC call to service [${sd.serviceName}]: ${eci.message.errorsString}")
-                errorMessage = eci.message.errorsString
+            try {
+                result = eci.service.sync().name(sd.getServiceName()).parameters((Map) paramsObj).call()
+                if (eci.getMessage().hasError()) {
+                    logger.warn("Got errors in JSON-RPC call to service [${sd.serviceName}]: ${eci.message.errorsString}")
+                    errorMessage = eci.message.errorsString
+                    // could use whatever code here as long as it is not -32768 to -32000, this was chosen somewhat arbitrarily
+                    errorCode = HttpServletResponse.SC_INTERNAL_SERVER_ERROR
+                }
+            } catch (ArtifactAuthorizationException e) {
+                logger.error("Authz error calling service ${sd.getServiceName()} from JSON-RPC request: ${e.toString()}", e)
+                errorMessage = e.getMessage()
+                // could use whatever code here as long as it is not -32768 to -32000, this was chosen somewhat arbitrarily
+                errorCode = HttpServletResponse.SC_FORBIDDEN
+            } catch (Exception e) {
+                logger.error("Error calling service ${sd.getServiceName()} from JSON-RPC request: ${e.toString()}", e)
+                errorMessage = e.getMessage()
                 // could use whatever code here as long as it is not -32768 to -32000, this was chosen somewhat arbitrarily
                 errorCode = HttpServletResponse.SC_INTERNAL_SERVER_ERROR
             }
